--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="">
+<body class="container mx-auto">
   <header>
     <h1 class="text-center text-4xl font-semibold text-b"> HUNTING PHONE</h1>
   </header>
-  <main>
-    <section class="container mx-auto mt-8">
+  <main class="">
+    <section class="flex justify-center">
+      <input type="text" placeholder="search..." id="search-field"
+        class="input input-bordered w-full max-w-xs h-25"></input>
+      <button onclick="handleSearch()" class="btn btn-active btn-accent">search</button>
+    </section>
+    <section class="mt-8">
       <div id="phone_container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
         <!-- first phone card -->
         <!-- <div class="card w-96 bg-base-100 shadow-xl">
